[project]
name = "anesthesia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "diskcache>=5.6.3",
    "fire>=0.7.1",
    "lightning==2.2.1",
    "numpy<2.0.0",
    "pandas>=2.3.2",
    "setuptools<81",
    "tensorboard>=2.20.0",
    "torch==2.2.1",
]
